changed check status and refund request's models
