# handlers/checkstatus/model.go
@@ -4,9 +4,9 @@ import "fmt"
 
 type OrderStatusRequest struct {
 	// bank merchant user name
-	Username string `json:"userName"`
+	Username string `json:"userName" binding:"required"`
 	// bank merchant passowrd
-	Password string `json:"password"`
+	Password string `json:"password" binding:"required"`
 	// Order id the same as order number
 	OrderID string `json:"orderId" binding:"required"`
 }
